fix whitespace

--- a/intex-react-app/src/index.scss
+++ b/intex-react-app/src/index.scss
@@ -3,6 +3,6 @@ $text-primary: #40587c;
  //primary bootstrap library
 
 .divSize {
-    height:80vh;
+    height:90vh;
 }
 @import '~bootstrap/scss/bootstrap';
